Added new sections

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <title>Amazon Links</title>
 </head>
 <body>
+    I was inspired by Bryan Johnson's Blueprint and wanted to pursue parts of it myself, I only had 1 problem... I lived in Sydney, Australia. Here is a list of links to products I have found that are the same/similar to the ones he uses but are available in Australia.<br>
+    Disclaimer: Some of these are referral links.
+    <h1>Nutty Pudding</h1>
     <ul>
         <li><a href="https://www.amazon.com.au/gp/product/B07H4WG1ST/ref=ppx_yo_dt_b_asin_title_o00_s00?ie=UTF8&psc=1">Organic Pea Protein</a></li>
         <li><a href="https://www.amazon.com.au/dp/B07FYPNGJW?psc=1&ref=ppx_yo2ov_dt_b_product_details">Walnuts</a></li>
@@ -13,6 +16,25 @@
         <li><a href="https://www.amazon.com.au/dp/B075XGQSNN?psc=1&ref=ppx_yo2ov_dt_b_product_details">Organic Milled Flaxseed</a></li>
         <li><a href="https://www.amazon.com.au/dp/B07J6W99DS?psc=1&ref=ppx_yo2ov_dt_b_product_details">Macadamia Nuts</a></li>
         <li><a href="https://www.amazon.com.au/dp/B08WR4VGNB?psc=1&ref=ppx_yo2ov_dt_b_product_details">Macadamia Milk</a></li>
+    </ul>
+    <h1>Supplements</h1>
+    <ul>
+        <li><a href="https://www.amazon.com.au/gp/product/B07H4WG1ST/ref=ppx_yo_dt_b_asin_title_o00_s00?ie=UTF8&psc=1">Organic Pea Protein</a></li>
+        <li><a href="https://www.amazon.com.au/dp/B07FYPNGJW?psc=1&ref=ppx_yo2ov_dt_b_product_details">Walnuts</a></li>
+        <li><a href="https://www.amazon.com.au/dp/B09445DQJR?psc=1&ref=ppx_yo2ov_dt_b_product_details">Mortar & Pestle</a></li>
+        <li><a href="https://www.amazon.com.au/dp/B0BLGLRLH8?psc=1&ref=ppx_yo2ov_dt_b_product_details">Ceylon Cinnamon</a></li>
+        <li><a href="https://www.amazon.com.au/dp/B07PXL18FV?psc=1&ref=ppx_yo2ov_dt_b_product_details">Non-dutched/alkalized Organic Cacao Powder</a></li>
+        <li><a href="https://www.amazon.com.au/dp/B075XGQSNN?psc=1&ref=ppx_yo2ov_dt_b_product_details">Organic Milled Flaxseed</a></li>
+        <li><a href="https://www.amazon.com.au/dp/B07J6W99DS?psc=1&ref=ppx_yo2ov_dt_b_product_details">Macadamia Nuts</a></li>
+        <li><a href="https://www.amazon.com.au/dp/B08WR4VGNB?psc=1&ref=ppx_yo2ov_dt_b_product_details">Macadamia Milk</a></li>
+    </ul>
+    <h1>Other</h1>
+    <ul>
+        <li><a href="https://www.sydneyfloatcentre.com.au/">Sydney Float Centre</a></li>
+        <li><a href="https://www.measureup.com.au/dexa/">DEXA scan</a></li>
+        <li><a href="https://koarecovery.com.au/">Cryo, Float, Infrared sauna</a></li>
+        <li><a href="https://www.measureup.com.au/dexa/">Cryo, Float, Infrared sauna</a></li>
+        <li><a href="https://www.cryo.com.au/cryotherapy/">Cryo</a></li>        
     </ul>
 </body>
 </html>
