Updated some links

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Amazon Links</title>
+    <title>Blueprint Sydney</title>
 </head>
 <body>
-    I was inspired by Bryan Johnson's Blueprint and wanted to pursue parts of it myself, I only had 1 problem... I lived in Sydney, Australia. Here is a list of links to products I have found that are the same/similar to the ones he uses but are available in Australia.<br>
-    Disclaimer: Some of these are referral links.
+    I was inspired by Bryan Johnson's <a href="https://blueprint.bryanjohnson.co/" target="_blank">Blueprint</a> and wanted to pursue parts of it myself, I only had 1 problem... I lived in Sydney, Australia. Here is a list of links to products I have found that are the same/similar to the ones he uses but are available in Australia.<br>
+    Disclaimer: Some of these are referral links. This page is open-source and additions/suggestions are welcome: <a href="https://github.com/danekshea/blueprint-aus">https://github.com/danekshea/blueprint-aus</a>
     <h1>Nutty Pudding</h1>
     <ul>
         <li><a href="https://www.amazon.com.au/gp/product/B07H4WG1ST/ref=ppx_yo_dt_b_asin_title_o00_s00?ie=UTF8&psc=1">Organic Pea Protein</a></li>
