Added green giant

--- a/index.html
+++ b/index.html
@@ -17,6 +17,15 @@
         <li><a href="https://www.amazon.com.au/dp/B07J6W99DS?psc=1&ref=ppx_yo2ov_dt_b_product_details">Macadamia Nuts</a></li>
         <li><a href="https://www.amazon.com.au/dp/B08WR4VGNB?psc=1&ref=ppx_yo2ov_dt_b_product_details">Macadamia Milk</a></li>
     </ul>
+    <h1>Green Giant</h1>
+    <ul>
+        <li><a href="https://www.amazon.com.au/dp/B09NP4MPQB?ref_=cm_sw_r_cp_ud_dp_RHG6FW422ZM4RBSH6WCX">Spermidine</a></li>
+        <li><a href="https://amzn.asia/d/dvigq6j">Amino Acid Complex</a></li>
+        <li><a href="https://www.amazon.com.au/Emrald-Labs-Creatine-Monohydrate/dp/B091DWLQZG/ref=sr_1_6?crid=16P5HOOTX7645&keywords=creatine&qid=1689903616&s=health&sprefix=creatine%2Chpc%2C218&sr=1-6">Creatine</a></li>
+        <li><a href="https://amzn.asia/d/3K2oAi8">Collagen Peptides</a></li>
+        <li><a href="https://amzn.asia/d/2PkSs2m">Cocoa Flavanols</a></li>
+        <li><a href="https://www.amazon.com.au/dp/B0BLGLRLH8?psc=1&ref=ppx_yo2ov_dt_b_product_details">Ceylon Cinnamon</a></li>
+    </ul>
     <h1>Supplements</h1>
     <ul>
         <li><a href="https://www.amazon.com.au/gp/product/B07H4WG1ST/ref=ppx_yo_dt_b_asin_title_o00_s00?ie=UTF8&psc=1">Organic Pea Protein</a></li>
@@ -33,7 +42,8 @@
         <li><a href="https://www.sydneyfloatcentre.com.au/">Sydney Float Centre</a></li>
         <li><a href="https://www.measureup.com.au/dexa/">DEXA scan</a></li>
         <li><a href="https://koarecovery.com.au/">Cryo, Float, Infrared sauna</a></li>
-        <li><a href="https://www.cryo.com.au/cryotherapy/">Cryo</a></li>        
+        <li><a href="https://www.cryo.com.au/cryotherapy/">Cryo</a></li>
+        <li><a href="https://imedical.com.au/">Blood panel</a></li>
     </ul>
 </body>
 </html>
