added more links

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
         <li><a href="https://koarecovery.com.au/">Cryo, Float, Infrared sauna</a></li>
         <li><a href="https://www.cryo.com.au/cryotherapy/">Cryo</a></li>
         <li><a href="https://imedical.com.au/">Blood panel</a></li>
+        <li><a href="https://www.freestylelibre.com.au/freestyle-libre-2-sensor.html">Blood glucose monitor</a></li>
     </ul>
 </body>
 </html>
