adding google analytics

--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
 <head>
     <title>Blueprint Sydney</title>
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-6VBM112RRH"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-6VBM112RRH');
+</script>
 <body>
     I was inspired by Bryan Johnson's <a href="https://blueprint.bryanjohnson.co/" target="_blank">Blueprint</a> and wanted to pursue parts of it myself, I only had 1 problem... I lived in Sydney, Australia. Here is a list of links to products I have found that are the same/similar to the ones he uses but are available in Australia.<br>
     Disclaimer: Some of these are referral links. This page is open-source and additions/suggestions are welcome: <a href="https://github.com/danekshea/blueprint-aus">https://github.com/danekshea/blueprint-aus</a>
