Added ref links

--- a/index.html
+++ b/index.html
@@ -17,43 +17,36 @@
     Disclaimer: Some of these are referral links. This page is open-source and additions/suggestions are welcome: <a href="https://github.com/danekshea/blueprint-aus">https://github.com/danekshea/blueprint-aus</a>
     <h1>Nutty Pudding</h1>
     <ul>
-        <li><a href="https://www.amazon.com.au/gp/product/B07H4WG1ST/ref=ppx_yo_dt_b_asin_title_o00_s00?ie=UTF8&psc=1">Organic Pea Protein</a></li>
-        <li><a href="https://www.amazon.com.au/dp/B07FYPNGJW?psc=1&ref=ppx_yo2ov_dt_b_product_details">Walnuts</a></li>
-        <li><a href="https://www.amazon.com.au/dp/B09445DQJR?psc=1&ref=ppx_yo2ov_dt_b_product_details">Mortar & Pestle</a></li>
-        <li><a href="https://www.amazon.com.au/dp/B0BLGLRLH8?psc=1&ref=ppx_yo2ov_dt_b_product_details">Ceylon Cinnamon</a></li>
-        <li><a href="https://www.amazon.com.au/dp/B07PXL18FV?psc=1&ref=ppx_yo2ov_dt_b_product_details">Non-dutched/alkalized Organic Cacao Powder</a></li>
-        <li><a href="https://www.amazon.com.au/dp/B075XGQSNN?psc=1&ref=ppx_yo2ov_dt_b_product_details">Organic Milled Flaxseed</a></li>
-        <li><a href="https://www.amazon.com.au/dp/B07J6W99DS?psc=1&ref=ppx_yo2ov_dt_b_product_details">Macadamia Nuts</a></li>
-        <li><a href="https://www.amazon.com.au/dp/B08WR4VGNB?psc=1&ref=ppx_yo2ov_dt_b_product_details">Macadamia Milk</a></li>
+        <li><a target="_blank" href="https://www.amazon.com.au/dp/B08WR4VGNB?&_encoding=UTF8&tag=blueprintaus-22&linkCode=ur2&linkId=5183ec80bd5e5abe50e149fde2e99d06&camp=247&creative=1211">Macadamia Milk</a></li>
+        <li><a target="_blank" href="https://www.amazon.com.au/dp/B07J6W99DS?&_encoding=UTF8&tag=blueprintaus-22&linkCode=ur2&linkId=85bb7e19d22af0bb0c5fcfcce176ef4c&camp=247&creative=1211">Macadamia Nuts</a></li>
+        <li><a target="_blank" href="https://www.amazon.com.au/dp/B07FYPNGJW?&_encoding=UTF8&tag=blueprintaus-22&linkCode=ur2&linkId=557882a27c31de51d90df9eedae6ebbb&camp=247&creative=1211">Walnuts</a></li>
+        <li><a target="_blank" href="https://www.amazon.com.au/dp/B075XGQSNN?&_encoding=UTF8&tag=blueprintaus-22&linkCode=ur2&linkId=13fe91433be4557f6fad0440b91c7955&camp=247&creative=1211">Organic Milled Flaxseed</a></li>
+        <li><a target="_blank" href="https://www.amazon.com.au/dp/B07PXL18FV?&_encoding=UTF8&tag=blueprintaus-22&linkCode=ur2&linkId=8c8132d66698c8b6c007b5bce40d0e73&camp=247&creative=1211">Non-dutched/non-alkalized Organic Cacao Powder</a></li>
+        <li><a target="_blank" href="https://www.amazon.com.au/dp/B0BLGLRLH8?&_encoding=UTF8&tag=blueprintaus-22&linkCode=ur2&linkId=c332a50fa90957c281e349b3ed8a010d&camp=247&creative=1211">Ceylon Cinnamon</a></li>
+        
     </ul>
     <h1>Green Giant</h1>
     <ul>
-        <li><a href="https://www.amazon.com.au/dp/B09NP4MPQB?ref_=cm_sw_r_cp_ud_dp_RHG6FW422ZM4RBSH6WCX">Spermidine</a></li>
-        <li><a href="https://amzn.asia/d/dvigq6j">Amino Acid Complex</a></li>
-        <li><a href="https://www.amazon.com.au/Emrald-Labs-Creatine-Monohydrate/dp/B091DWLQZG/ref=sr_1_6?crid=16P5HOOTX7645&keywords=creatine&qid=1689903616&s=health&sprefix=creatine%2Chpc%2C218&sr=1-6">Creatine</a></li>
-        <li><a href="https://amzn.asia/d/3K2oAi8">Collagen Peptides</a></li>
-        <li><a href="https://amzn.asia/d/2PkSs2m">Cocoa Flavanols</a></li>
-        <li><a href="https://www.amazon.com.au/dp/B0BLGLRLH8?psc=1&ref=ppx_yo2ov_dt_b_product_details">Ceylon Cinnamon</a></li>
+        <li><a target="_blank" href="https://www.amazon.com.au/dp/B08WR4VGNB?&_encoding=UTF8&tag=blueprintaus-22&linkCode=ur2&linkId=9c4e2f25679e8e319a8c567083d3f402&camp=247&creative=1211">Spermidine</a></li>
+        <li><a target="_blank" href="https://www.amazon.com.au/dp/B07PP4KD36?&_encoding=UTF8&tag=blueprintaus-22&linkCode=ur2&linkId=d436ab79df13c26386042c92e5539681&camp=247&creative=1211">Amino Acid Complex</a></li>
+        <li><a target="_blank" href="https://www.amazon.com.au/Emrald-Labs-Creatine-Monohydrate/dp/B091DWLQZG?&_encoding=UTF8&tag=blueprintaus-22&linkCode=ur2&linkId=cb2bd0c2c734b4b57a5858efafe3d626&camp=247&creative=1211">Creatine</a></li>
+        <li><a target="_blank" href="https://www.amazon.com.au/dp/B07G5969Y1?&_encoding=UTF8&tag=blueprintaus-22&linkCode=ur2&linkId=3acc7a538691f0192dbdd0c77cce5d76&camp=247&creative=1211">Collagen Peptides</a></li>
+        <li><a target="_blank" href="https://www.amazon.com.au/dp/B09FTPX1Y2?&_encoding=UTF8&tag=blueprintaus-22&linkCode=ur2&linkId=d0ee3198a827023a71a522ae907369aa&camp=247&creative=1211">Cocoa Flavanols</a></li>
+        <li><a target="_blank" href="https://www.amazon.com.au/dp/B0BLGLRLH8?&_encoding=UTF8&tag=blueprintaus-22&linkCode=ur2&linkId=3c4f6d39aafcfbd2e886bf3d1901dfd9&camp=247&creative=1211">Ceylon Cinnamon</a></li>
     </ul>
     <h1>Supplements</h1>
     <ul>
-        <li><a href="https://www.amazon.com.au/gp/product/B07H4WG1ST/ref=ppx_yo_dt_b_asin_title_o00_s00?ie=UTF8&psc=1">Organic Pea Protein</a></li>
-        <li><a href="https://www.amazon.com.au/dp/B07FYPNGJW?psc=1&ref=ppx_yo2ov_dt_b_product_details">Walnuts</a></li>
-        <li><a href="https://www.amazon.com.au/dp/B09445DQJR?psc=1&ref=ppx_yo2ov_dt_b_product_details">Mortar & Pestle</a></li>
-        <li><a href="https://www.amazon.com.au/dp/B0BLGLRLH8?psc=1&ref=ppx_yo2ov_dt_b_product_details">Ceylon Cinnamon</a></li>
-        <li><a href="https://www.amazon.com.au/dp/B07PXL18FV?psc=1&ref=ppx_yo2ov_dt_b_product_details">Non-dutched/alkalized Organic Cacao Powder</a></li>
-        <li><a href="https://www.amazon.com.au/dp/B075XGQSNN?psc=1&ref=ppx_yo2ov_dt_b_product_details">Organic Milled Flaxseed</a></li>
-        <li><a href="https://www.amazon.com.au/dp/B07J6W99DS?psc=1&ref=ppx_yo2ov_dt_b_product_details">Macadamia Nuts</a></li>
-        <li><a href="https://www.amazon.com.au/dp/B08WR4VGNB?psc=1&ref=ppx_yo2ov_dt_b_product_details">Macadamia Milk</a></li>
+        <li><a target="_blank" href="https://www.amazon.com.au/gp/product/B07H4WG1ST?&_encoding=UTF8&tag=blueprintaus-22&linkCode=ur2&linkId=d54eaf8db0ef9bf444291dbd0cd20b07&camp=247&creative=1211">Organic Pea Protein</a></li>
     </ul>
     <h1>Other</h1>
     <ul>
-        <li><a href="https://www.sydneyfloatcentre.com.au/">Sydney Float Centre</a></li>
-        <li><a href="https://www.measureup.com.au/dexa/">DEXA scan</a></li>
-        <li><a href="https://koarecovery.com.au/">Cryo, Float, Infrared sauna</a></li>
-        <li><a href="https://www.cryo.com.au/cryotherapy/">Cryo</a></li>
-        <li><a href="https://imedical.com.au/">Blood panel</a></li>
-        <li><a href="https://www.freestylelibre.com.au/freestyle-libre-2-sensor.html">Blood glucose monitor</a></li>
+        <li><a href="https://www.sydneyfloatcentre.com.au/" target="_blank">Sydney Float Centre</a></li>
+        <li><a href="https://www.measureup.com.au/dexa/" target="_blank">DEXA scan</a></li>
+        <li><a href="https://koarecovery.com.au/" target="_blank">Cryo, Float, Infrared sauna</a></li>
+        <li><a href="https://www.cryo.com.au/cryotherapy/" target="_blank">Cryo</a></li>
+        <li><a href="https://imedical.com.au/" target="_blank">Blood panel</a></li> target="_blank"
+        <li><a href="https://www.freestylelibre.com.au/freestyle-libre-2-sensor.html" target="_blank">Blood glucose monitor</a></li>
+        <li><a target="_blank" href="https://www.amazon.com.au/dp/B09445DQJR?&_encoding=UTF8&tag=blueprintaus-22&linkCode=ur2&linkId=b0cc5bad302164b2a1db46203ee66091&camp=247&creative=1211">Mortar &amp; Pestle</a></li>
     </ul>
 </body>
 </html>
