--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
     </ul>
     <h1>Other</h1>
     <ul>
-        <li><a href="https://www.sydneyfloatcentre.com.au/" target="_blank">Sydney Float Centre</a></li>
-        <li><a href="https://www.measureup.com.au/dexa/" target="_blank">DEXA scan</a></li>
-        <li><a href="https://koarecovery.com.au/" target="_blank">Cryo, Float, Infrared sauna</a></li>
-        <li><a href="https://www.cryo.com.au/cryotherapy/" target="_blank">Cryo</a></li>
-        <li><a href="https://imedical.com.au/" target="_blank">Blood panel</a></li> target="_blank"
-        <li><a href="https://www.freestylelibre.com.au/freestyle-libre-2-sensor.html" target="_blank">Blood glucose monitor</a></li>
+        <li><a target="_blank" href="https://www.measureup.com.au/dexa/">DEXA scan</a></li>
+        <li><a target="_blank" href="https://www.sydneyfloatcentre.com.au/">Sydney Float Centre</a></li>
+        <li><a target="_blank" href="https://koarecovery.com.au/">Cryo, Float, Infrared sauna</a></li>
+        <li><a target="_blank" href="https://www.cryo.com.au/cryotherapy/">Cryo</a></li>
+        <li><a target="_blank" href="https://imedical.com.au/">Blood panel</a></li>
+        <li><a target="_blank" href="https://www.freestylelibre.com.au/freestyle-libre-2-sensor.html">Blood glucose monitor</a></li>
         <li><a target="_blank" href="https://www.amazon.com.au/dp/B09445DQJR?&_encoding=UTF8&tag=blueprintaus-22&linkCode=ur2&linkId=b0cc5bad302164b2a1db46203ee66091&camp=247&creative=1211">Mortar &amp; Pestle</a></li>
     </ul>
 </body>
