--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
         <li><a target="_blank" href="https://www.amazon.com.au/dp/B07J6W99DS?&_encoding=UTF8&tag=blueprintaus-22&linkCode=ur2&linkId=85bb7e19d22af0bb0c5fcfcce176ef4c&camp=247&creative=1211">Macadamia Nuts</a></li>
         <li><a target="_blank" href="https://www.amazon.com.au/dp/B07FYPNGJW?&_encoding=UTF8&tag=blueprintaus-22&linkCode=ur2&linkId=557882a27c31de51d90df9eedae6ebbb&camp=247&creative=1211">Walnuts</a></li>
         <li><a target="_blank" href="https://www.amazon.com.au/dp/B075XGQSNN?&_encoding=UTF8&tag=blueprintaus-22&linkCode=ur2&linkId=13fe91433be4557f6fad0440b91c7955&camp=247&creative=1211">Organic Milled Flaxseed</a></li>
+        <li><a target="_blank" href="https://www.amazon.com.au/Genoa-Foods-Brazil-Nuts-300/dp/B07FYN23L1?&_encoding=UTF8&tag=blueprintaus-22&linkCode=ur2&linkId=b844029302de80f1a51f5a86c4908f26&camp=247&creative=1211">Brazil Nuts</a></li>
         <li><a target="_blank" href="https://www.amazon.com.au/dp/B07PXL18FV?&_encoding=UTF8&tag=blueprintaus-22&linkCode=ur2&linkId=8c8132d66698c8b6c007b5bce40d0e73&camp=247&creative=1211">Non-dutched/non-alkalized Organic Cacao Powder</a></li>
+        <li><a target="_blank" href="https://www.amazon.com.au/Organic-Sunflower-Lecithin-Sustainable-Friendly/dp/B01N02YNF5?&_encoding=UTF8&tag=blueprintaus-22&linkCode=ur2&linkId=6bd3e6d75480ed45cb398287d9cd1b91&camp=247&creative=1211">Organic Sunflower Lecithin Powder</a></li>
         <li><a target="_blank" href="https://www.amazon.com.au/dp/B0BLGLRLH8?&_encoding=UTF8&tag=blueprintaus-22&linkCode=ur2&linkId=c332a50fa90957c281e349b3ed8a010d&camp=247&creative=1211">Ceylon Cinnamon</a></li>
         
     </ul>
@@ -47,6 +49,7 @@
         <li><a target="_blank" href="https://imedical.com.au/">Blood panel</a></li>
         <li><a target="_blank" href="https://www.freestylelibre.com.au/freestyle-libre-2-sensor.html">Blood glucose monitor</a></li>
         <li><a target="_blank" href="https://www.amazon.com.au/dp/B09445DQJR?&_encoding=UTF8&tag=blueprintaus-22&linkCode=ur2&linkId=b0cc5bad302164b2a1db46203ee66091&camp=247&creative=1211">Mortar &amp; Pestle</a></li>
+        <li><a target="_blank" href="https://www.amazon.com.au/VJK-Blocking-Glasses-Eyestrain-Computer/dp/B08BZMCPL4?&_encoding=UTF8&tag=blueprintaus-22&linkCode=ur2&linkId=011c36ae2ce5cf774a576614306fae97&camp=247&creative=1211">Blue Light Blocking Glasses</a></li>
     </ul>
 </body>
 </html>
