added a bunch of sections, updated links

--- a/index.html
+++ b/index.html
@@ -15,7 +15,29 @@
 <body>
     I was inspired by Bryan Johnson's <a href="https://blueprint.bryanjohnson.co/" target="_blank">Blueprint</a> and wanted to pursue parts of it myself, I only had 1 problem... I lived in Sydney, Australia. Here is a list of links to products I have found that are the same/similar to the ones he uses but are available in Australia.<br>
     Disclaimer: Some of these are referral links. This page is open-source and additions/suggestions are welcome: <a href="https://github.com/danekshea/blueprint-aus">https://github.com/danekshea/blueprint-aus</a>
-    <h1>Nutty Pudding</h1>
+    <h1>Food - Green Giant</h1>
+    <ul>
+        <li><a target="_blank" href="https://amzn.to/3rFuRsf">Spermidine</a></li>
+        <li><a target="_blank" href="https://amzn.to/46VHAal">Amino Acid Complex</a></li>
+        <li><a target="_blank" href="https://amzn.to/3Dl9oHN">Creatine</a></li>
+        <li><a target="_blank" href="https://amzn.to/3rJZTis">Collagen Peptides</a></li>
+        <li><a target="_blank" href="https://amzn.to/3O51t62">Cocoa Flavanols</a></li>
+        <li><a target="_blank" href="https://amzn.to/3NTurWs">Ceylon Cinnamon</a></li>
+    </ul>
+    <h1>Food - Super Veggie</h1>
+        <li><a target="_blank" href="">Black lentils, 300 grams (weighed cooked)</a></li>
+        <li><a target="_blank" href="">Broccoli (head+stalk), 250 grams</a></li>
+        <li><a target="_blank" href="">Cauliflower. 150 grams</a></li>
+        <li><a target="_blank" href="">Shiitake or Maitake Mushrooms, 50 grams</a></li>
+        <li><a target="_blank" href="">Garlic, 1 clove (a piece)</a></li>
+        <li><a target="_blank" href="">Ginger Root, 3 grams</a></li>
+        <li><a target="_blank" href="">Lime, 1</a></li>
+        <li><a target="_blank" href="">Cumin, 1 Tbsp</a></li>
+        <li><a target="_blank" href="">Apple Cider Vinegar, 1 Tbsp</a></li>
+        <li><a target="_blank" href="">Hemp Seeds, 1 Tbsp</a></li>
+        <li><a target="_blank" href="">After prep, drizzle 1 Tbsp of Extra Virgin Olive Oil</a></li>    
+    <ul>
+    <h1>Food - Nutty Pudding</h1>
     <ul>
         <li><a target="_blank" href="https://amzn.to/3rv4ftM">Macadamia Milk</a></li>
         <li><a target="_blank" href="https://amzn.to/43BQQOb">Macadamia Nuts</a></li>
@@ -27,18 +49,76 @@
         <li><a target="_blank" href="https://amzn.to/470WZGC">Ceylon Cinnamon</a></li>
         <li><a target="_blank" href="https://amzn.to/3Q8WpQS">Organic Pomegranate Juice - Not from concentrate</a></li>   
     </ul>
-    <h1>Green Giant</h1>
+
+    <h1>Supplements - Upon waking</h1>
     <ul>
-        <li><a target="_blank" href="https://amzn.to/3rFuRsf">Spermidine</a></li>
-        <li><a target="_blank" href="https://amzn.to/46VHAal">Amino Acid Complex</a></li>
-        <li><a target="_blank" href="https://amzn.to/3Dl9oHN">Creatine</a></li>
-        <li><a target="_blank" href="https://amzn.to/3rJZTis">Collagen Peptides</a></li>
-        <li><a target="_blank" href="https://amzn.to/3O51t62">Cocoa Flavanols</a></li>
-        <li><a target="_blank" href="https://amzn.to/3NTurWs">Ceylon Cinnamon</a></li>
+        <li><a target="_blank" href="">Acarbose 200mg (Rx)</a></li>
+        <li><a target="_blank" href="https://amzn.to/3O0ECc6">Ashwagandha 600mg</a></li>
+        <li><a target="_blank" href="https://amzn.to/43EYWFA">B Complex .25 pill M/Th</a></li>
+        <li><a target="_blank" href="https://amzn.to/3Y30YhE">BroccoMax 17.5mg</a></li>
+        <li><a target="_blank" href="https://amzn.to/3K7nG2y">Vitamin C 500mg</a></li>
+        <li><a target="_blank" href="">Ca-AKG 1 gram</a></li>
+        <li><a target="_blank" href="">Cocoa Flavanols 500mg</a></li>
+        <li><a target="_blank" href="">CoQ10 100mg</a></li>
+        <li><a target="_blank" href="">D-3 2,000 IU</a></li>
+        <li><a target="_blank" href="">DHEA 25mg</a></li>
+        <li><a target="_blank" href="">E 67mg</a></li>
+        <li><a target="_blank" href="">EPA 500mg with vitamin E 5mg</a></li>
+        <li><a target="_blank" href="">Garlic 2.4g equivalent</a></li>
+        <li><a target="_blank" href="">Garlic 1.2g (kyolic)</a></li>
+        <li><a target="_blank" href="">Ginger Root 2.2g</a></li>
+        <li><a target="_blank" href="">Glucosamine Sulphate 2KCL 1,500mg</a></li>
+        <li><a target="_blank" href="">Iodine as potassium iodide 125 mcg</a></li>
+        <li><a target="_blank" href="">K2-MK4, 5mg</a></li>
+        <li><a target="_blank" href="">K1, 1.5mg</a></li>
+        <li><a target="_blank" href="">K2 MK-7, 600ug</a></li>
+        <li><a target="_blank" href="">Lithium, as lithium orotate, 1mg</a></li>
+        <li><a target="_blank" href="">Lycopene 10mg</a></li>
+        <li><a target="_blank" href="">Lysine 1g</a></li>
+        <li><a target="_blank" href="">Metformin ER 1,500 (Rx)</a></li>
+        <li><a target="_blank" href="">Nicotinamide Riboside 375mg (6 x wk)</a></li>
+        <li><a target="_blank" href="">N-Acetyl-L-Cysteine (NAC) 1,800 mg</a></li>
+        <li><a target="_blank" href="">Proferrin 10mg</a></li>
+        <li><a target="_blank" href="">Turmeric with piperine 1g</a></li>
+        <li><a target="_blank" href="">Taurine 2g</a></li>
+        <li><a target="_blank" href="">Zeaxanthin (20mg Lutein, 4mg Zeaxanthin)</a></li>
+        <li><a target="_blank" href="">Zinc 15mg</a></li>
     </ul>
-    <h1>Supplements</h1>
+    <h1>Supplements - w/Dinner at 11am</h1>
     <ul>
-        <li><a target="_blank" href="https://amzn.to/44xukY0">Organic Pea Protein</a></li>
+        <li><a target="_blank" href="">Acarbose 200mg (Rx)</a></li>
+        <li><a target="_blank" href="">BroccoMax 17.5mg</a></li>
+        <li><a target="_blank" href="">Ca-AKG 1 gram</a></li>
+        <li><a target="_blank" href="">Cocoa Flavanols 500mg (has caffeine)</a></li>
+        <li><a target="_blank" href="">E 67mg</a></li>
+        <li><a target="_blank" href="">EPA 500mg</a></li>
+        <li><a target="_blank" href="">Garlic 2.4g equivalent</a></li>
+        <li><a target="_blank" href="">Garlic 1.2g (kyolic)</a></li>
+        <li><a target="_blank" href="">Ginger Root 2.2g</a></li>
+        <li><a target="_blank" href="">Glucosamine Sulphate 2KCL 1,500mg</a></li>
+        <li><a target="_blank" href="">Hyaluronic Acid 300mg</a></li>
+        <li><a target="_blank" href="">Lysine 1g</a></li>
+        <li><a target="_blank" href="">L-Tyrosine, 500mg</a></li>
+        <li><a target="_blank" href="">Metformin ER 500 mg (Rx)</a></li>
+        <li><a target="_blank" href="">N-Acetyl-L-Cysteine (NAC) 1,800 mg</a></li>
+        <li><a target="_blank" href="">Nicotinamide Riboside 375mg (6x wk)</a></li>
+        <li><a target="_blank" href="">Taurine 1g</a></li>
+        <li><a target="_blank" href="">Turmeric 1g</a></li>
+    </ul>
+    <h1>Supplements - Other</h1>
+    <ul>
+        <li><a target="_blank" href="">Extra Virgin Olive Oil, 30mL daily</a></li>
+        <li><a target="_blank" href="">Pea Protein, 29 grams daily</a></li>
+        <li><a target="_blank" href="">Dark Chocolate, 15 grams</a></li>
+        <li><a target="_blank" href="">Rapamycin 13mg, bi-weekly (Rx)</a></li>
+        <li><a target="_blank" href="">HGH .6mg, 5x wk (discontinued 5/31 after 100 days due to side effects)</a></li>
+        <li><a target="_blank" href="">17aE2, 4g wk transdermal</a></li>
+        <li><a target="_blank" href="">Testosterone 2mg patch 6x weekly</a></li>
+        <li><a target="_blank" href="">NDGA 50mg 1x daily</a></li>
+        <li><a target="_blank" href="">B12 methylcobalamin 1x/wk</a></li>
+        <li><a target="_blank" href="">Aspirin 81mg 3x wk</a></li>
+        <li><a target="_blank" href="">112mcg Levothyroxine, 60mg Armour Thyroid (diagnosed with hypothyroidism at age 21)</a></li>
+        <li>Note: an EVOO available for purchase in Aug.  Working on dark chocolate.</li>
     </ul>
     <h1>Other</h1>
     <ul>
