--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   gtag('config', 'G-6VBM112RRH');
 </script>
 <body>
-    I was inspired by Bryan Johnson's <a href="https://blueprint.bryanjohnson.co/" target="_blank">Blueprint</a> and wanted to pursue parts of it myself, I only had 1 problem... I lived in Sydney, Australia. Here is a list of links to products I have found that are the same/similar to the ones he uses but are available in Australia.<br>
+    I was inspired by Bryan Johnson's <a href="https://blueprint.bryanjohnson.co/" target="_blank">Blueprint</a> and wanted to pursue parts of it myself, I only had 1 problem... I live in Sydney, Australia. Here is a list of links to products I have found that are the same/similar to the ones he uses but are available in Australia.<br>
     Disclaimer: Some of these are referral links. This page is open-source and additions/suggestions are welcome: <a href="https://github.com/danekshea/blueprint-aus">https://github.com/danekshea/blueprint-aus</a>
     <h1>Food - Green Giant</h1>
     <ul>
