Added new links

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </ul>
     <h1>Food - Super Veggie</h1>
     <ul>
-        <li><a target="_blank" href="">Black lentils, 300 grams (weighed cooked)</a></li>
+        <li><a target="_blank" href="https://amzn.to/3rB9ybb">Black lentils, 300 grams (weighed cooked)</a></li>
         <li><a target="_blank" href="">Broccoli (head+stalk), 250 grams</a></li>
         <li><a target="_blank" href="">Cauliflower. 150 grams</a></li>
         <li><a target="_blank" href="">Shiitake or Maitake Mushrooms, 50 grams</a></li>
@@ -34,8 +34,8 @@
         <li><a target="_blank" href="">Ginger Root, 3 grams</a></li>
         <li><a target="_blank" href="">Lime, 1</a></li>
         <li><a target="_blank" href="">Cumin, 1 Tbsp</a></li>
-        <li><a target="_blank" href="">Apple Cider Vinegar, 1 Tbsp</a></li>
-        <li><a target="_blank" href="">Hemp Seeds, 1 Tbsp</a></li>
+        <li><a target="_blank" href="https://amzn.to/46XiqrZ">Apple Cider Vinegar, 1 Tbsp</a></li>
+        <li><a target="_blank" href="https://amzn.to/46ZO7kk">Hemp Seeds, 1 Tbsp</a></li>
         <li><a target="_blank" href="">After prep, drizzle 1 Tbsp of Extra Virgin Olive Oil</a></li>    
     </ul>
     <h1>Food - Nutty Pudding</h1>
@@ -108,7 +108,7 @@
     <h1>Supplements - Other</h1>
     <ul>
         <li><a target="_blank" href="">Extra Virgin Olive Oil, 30mL daily</a></li>
-        <li><a target="_blank" href="">Pea Protein, 29 grams daily</a></li>
+        <li><a target="_blank" href="https://amzn.to/3Y3pkry">Pea Protein, 29 grams daily</a></li>
         <li><a target="_blank" href="">Dark Chocolate, 15 grams</a></li>
         <li><a target="_blank" href="">Rapamycin 13mg, bi-weekly (Rx)</a></li>
         <li><a target="_blank" href="">HGH .6mg, 5x wk (discontinued 5/31 after 100 days due to side effects)</a></li>
@@ -130,6 +130,7 @@
         <li><a target="_blank" href="https://www.freestylelibre.com.au/freestyle-libre-2-sensor.html">Blood glucose monitor</a></li>
         <li><a target="_blank" href="https://amzn.to/3O1S6Ev">Mortar &amp; Pestle</a></li>
         <li><a target="_blank" href="https://amzn.to/3NTSNzy">Blue Light Blocking Glasses</a></li>
+        <li><a target="_blank" href="https://amzn.to/44YfARt">Measuring Spoons</a></li>
     </ul>
 </body>
 </html>
