added new links

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <li><a target="_blank" href="https://amzn.to/44QIgMm">Organic Milled Flaxseed</a></li>
         <li><a target="_blank" href="https://amzn.to/3pO825e">Brazil Nuts</a></li>
         <li><a target="_blank" href="https://amzn.to/3OmpF5j">Non-dutched/non-alkalized Organic Cacao Powder</a></li>
-        <li><a target="_blank" href="https://amzn.to/3rGI9F2">Organic Sunflower Lecithin Powder</a></li>
+        <li><a target="_blank" href="https://au.iherb.com/pr/now-foods-sunflower-liquid-lecithin-16-fl-oz-473-ml/56886?gclid=Cj0KCQjwn_OlBhDhARIsAG2y6zOSs2MPXaUxqSjAuwPwZjhON7ITk5TUw5wnOf74rt0WvQNtPX1ZY2IaAkAIEALw_wcB&gclsrc=aw.ds">Organic Sunflower Lecithin Powder</a></li>
         <li><a target="_blank" href="https://amzn.to/470WZGC">Ceylon Cinnamon</a></li>
         <li><a target="_blank" href="https://amzn.to/3Q8WpQS">Organic Pomegranate Juice - Not from concentrate</a></li>   
     </ul>
@@ -131,6 +131,28 @@
         <li><a target="_blank" href="https://amzn.to/3O1S6Ev">Mortar &amp; Pestle</a></li>
         <li><a target="_blank" href="https://amzn.to/3NTSNzy">Blue Light Blocking Glasses</a></li>
         <li><a target="_blank" href="https://amzn.to/44YfARt">Measuring Spoons</a></li>
+    </ul>
+    <h1>Night time routine</h1>
+    <ul>
+        <li><a target="_blank" href="https://nurosym.com/">Nurosym</a></li>
+        <li><a target="_blank" href="https://pulsetto.tech/">Pulsetto</a></li>
+        <li><a target="_blank" href="https://amzn.to/3q0pH9K">Sinometry(for measuring lung capacity)</a></li>
+        <li><a target="_blank" href="https://amzn.to/3pZgIFU">Sensate 2</a></li>
+        <li><a target="_blank" href="https://amzn.to/3O6qYUC">CeraVe Facial Cleanser</a></li>
+        <li><a target="_blank" href="https://amzn.to/3Y1Tzzc">CeraVe Facial Moiturizing PM</a></li>
+        <li><a target="_blank" href="https://amzn.to/3Q2h09A">CeraVe Facial Moisturizing AM</a></li>
+        <li><a target="_blank" href="https://amzn.to/3O56I5T">Water Pik</a></li>
+    </ul>
+    <h1>Smarter Items</h1>
+    <ul>
+        <li><a target="_blank" href="https://amzn.to/3Y3CxRa">Withings Scale</a></li>
+        <li><a target="_blank" href="https://amzn.to/3O3hKZs">Hand Grip Set</a></li>
+        <li><a target="_blank" href="https://amzn.to/3Q6UPim">Dressing Containers</a></li>
+        <li><a target="_blank" href="https://amzn.to/3Q6V5hk">Bedroom Blackout Film</a></li>
+    </ul>
+    <h1>Sources</h1>
+    <ul>
+        <li><a target="_blank" href="https://youtu.be/Z7veiyN4LqU">Top 1% Sleep Ranking - My Evening Routine</a></li>
     </ul>
 </body>
 </html>
