--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
       <div class="typing column-span"><span /></div>
       <div class="column-span">
         Are you inspired by Bryan Johnson's <a href="https://blueprint.bryanjohnson.co/" target="_blank">Blueprint</a> but live in Sydney, Australia?
-        Me too! Here are products that are the same/similar to the ones he uses but available in Australia.<br /><br />
+        Me too! Here are the same/similar products but available in Australia.<br /><br />
         Disclaimer: Some of these are referral links.
       </div>
       <div class="flex-column">
