Added the me link

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Blueprint Sydney</title>
     <style>
       body {
-        background-color: black;
+        background-color: #004db2;
       }
       .flex-container {
         display: flex;
@@ -146,7 +146,7 @@
       <div class="typing column-span"><span /></div>
       <div class="column-span intro">
         Are you inspired by Bryan Johnson's <a href="https://blueprint.bryanjohnson.co/" target="_blank">Blueprint</a> but live in Sydney, Australia?
-        Me too! Here are the same/similar products but available in Australia.<br /><br />
+        <a href="https://twitter.com/danekshea" target="_blank">Me</a> too! Here are the same/similar products but available in Australia.<br /><br />
         
         <span class="disclaimer">Disclaimer: Some of these are referral links.</span>
       </div>
