--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Blueprint Sydney</title>
     <style>
       body {
-        background-color: #004db2;
+        background-color: #000000;
       }
       .flex-container {
         display: flex;
@@ -173,10 +173,10 @@
           <li><a target="_blank" href="">Garlic, 1 clove (a piece)</a></li>
           <li><a target="_blank" href="">Ginger Root, 3 grams</a></li>
           <li><a target="_blank" href="">Lime, 1</a></li>
-          <li><a target="_blank" href="">Cumin, 1 Tbsp</a></li>
+          <li><a target="_blank" href="https://amzn.to/43EswLv">Cumin, 1 Tbsp</a></li>
           <li><a target="_blank" href="https://amzn.to/46XiqrZ">Apple Cider Vinegar, 1 Tbsp</a></li>
           <li><a target="_blank" href="https://amzn.to/46ZO7kk">Hemp Seeds, 1 Tbsp</a></li>
-          <li><a target="_blank" href="">1 Tbsp of Extra Virgin Olive Oil</a></li>
+          <li><a target="_blank" href="https://amzn.to/46YuJ7p">1 Tbsp of Extra Virgin Olive Oil</a></li>
         </ul>
       </div>
       <div class="flex-column">
