--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
       <div class="typing column-span"><span /></div>
       <div class="column-span intro">
         Are you inspired by Bryan Johnson's <a href="https://blueprint.bryanjohnson.co/" target="_blank">Blueprint</a> but live in Sydney, Australia?
-        <a href="https://twitter.com/danekshea" target="_blank">Me</a> too! Here are the same/similar products but available in Australia.<br /><br />
+        <a href="https://twitter.com/danekshea" target="_blank">Me</a> too! Here are the same/similar products but available in Australia. Suggestions/additions/comments very welcome.<br /><br />
         
         <span class="disclaimer">Disclaimer: Some of these are referral links.</span>
       </div>
@@ -154,7 +154,7 @@
         <div class="column-title">🍎 Green Giant</div>
         <ul>
           <li>
-            <a target="_blank" href="https://amzn.to/3rFuRsf"><span>Spermidine</span></a>
+            <a target="_blank" href="https://amzn.to/3K6yzkP"><span>Chorella Powder(Spermidine)</span></a>
           </li>
           <li><a target="_blank" href="https://amzn.to/46VHAal">Amino Acid Complex</a></li>
           <li><a target="_blank" href="https://amzn.to/3Dl9oHN">Creatine</a></li>
@@ -167,12 +167,12 @@
         <div class="column-title">🍎 Super Veggie</div>
         <ul>
           <li><a target="_blank" href="https://amzn.to/3rB9ybb">Black lentils, 300 grams (weighed cooked)</a></li>
-          <li><a target="_blank" href="">Broccoli (head+stalk), 250 grams</a></li>
-          <li><a target="_blank" href="">Cauliflower. 150 grams</a></li>
-          <li><a target="_blank" href="">Shiitake or Maitake Mushrooms, 50 grams</a></li>
-          <li><a target="_blank" href="">Garlic, 1 clove (a piece)</a></li>
-          <li><a target="_blank" href="">Ginger Root, 3 grams</a></li>
-          <li><a target="_blank" href="">Lime, 1</a></li>
+          <li>Broccoli (head+stalk), 250 grams</li>
+          <li>Cauliflower, 150 grams</li>
+          <li>Shiitake or Maitake Mushrooms, 50 grams</li>
+          <li>Garlic, 1 clove (a piece)</li>
+          <li>Ginger Root, 3 grams</li>
+          <li>Lime, 1</li>          
           <li><a target="_blank" href="https://amzn.to/43EswLv">Cumin, 1 Tbsp</a></li>
           <li><a target="_blank" href="https://amzn.to/46XiqrZ">Apple Cider Vinegar, 1 Tbsp</a></li>
           <li><a target="_blank" href="https://amzn.to/46ZO7kk">Hemp Seeds, 1 Tbsp</a></li>
@@ -207,61 +207,61 @@
           <li><a target="_blank" href="https://amzn.to/43EYWFA">B Complex .25 pill M/Th</a></li>
           <li><a target="_blank" href="https://amzn.to/3Y30YhE">BroccoMax 17.5mg</a></li>
           <li><a target="_blank" href="https://amzn.to/3K7nG2y">Vitamin C 500mg</a></li>
-          <li><a target="_blank" href="">Ca-AKG 1 gram</a></li>
-          <li><a target="_blank" href="">Cocoa Flavanols 500mg</a></li>
-          <li><a target="_blank" href="">CoQ10 100mg</a></li>
-          <li><a target="_blank" href="">D-3 2,000 IU</a></li>
+          <li><a target="_blank" href="https://amzn.to/44AKXC3">Ca-AKG 1 gram</a></li>
+          <li><a target="_blank" href="https://amzn.to/3O51t62">Cocoa Flavanols 500mg</a></li>
+          <li><a target="_blank" href="https://amzn.to/3ryOsKu">CoQ10 100mg</a></li>
+          <li><a target="_blank" href="https://amzn.to/3rIStMI">D-3 2,000 IU</a></li>
           <li><a target="_blank" href="">DHEA 25mg</a></li>
-          <li><a target="_blank" href="">E 67mg</a></li>
-          <li><a target="_blank" href="">EPA 500mg with vitamin E 5mg</a></li>
-          <li><a target="_blank" href="">Garlic 2.4g equivalent</a></li>
-          <li><a target="_blank" href="">Garlic 1.2g (kyolic)</a></li>
-          <li><a target="_blank" href="">Ginger Root 2.2g</a></li>
-          <li><a target="_blank" href="">Glucosamine Sulphate 2KCL 1,500mg</a></li>
-          <li><a target="_blank" href="">Iodine as potassium iodide 125 mcg</a></li>
-          <li><a target="_blank" href="">K2-MK4, 5mg</a></li>
-          <li><a target="_blank" href="">K1, 1.5mg</a></li>
-          <li><a target="_blank" href="">K2 MK-7, 600ug</a></li>
-          <li><a target="_blank" href="">Lithium, as lithium orotate, 1mg</a></li>
-          <li><a target="_blank" href="">Lycopene 10mg</a></li>
-          <li><a target="_blank" href="">Lysine 1g</a></li>
+          <li><a target="_blank" href="https://amzn.to/3Q7XUPc">E 67mg</a></li>
+          <li><a target="_blank" href="https://amzn.to/46Zk4JD">EPA 500mg with vitamin E 5mg</a></li>
+          <li><a target="_blank" href="https://amzn.to/46VjP2h">Garlic 2.4g equivalent</a></li>
+          <li><a target="_blank" href="https://amzn.to/3Y77Uuj">Garlic 1.2g (kyolic)</a></li>
+          <li><a target="_blank" href="https://amzn.to/3pZrk7x">Ginger Root 2.2g</a></li>
+          <li><a target="_blank" href="https://amzn.to/3pZNaYy">Glucosamine Sulphate 2KCL 1,500mg</a></li>
+          <li><a target="_blank" href="https://amzn.to/43yE96J">Iodine as potassium iodide 125 mcg</a></li>
+          <li><a target="_blank" href="https://amzn.to/3NZB49U">K2-MK4, 5mg</a></li>
+          <li><a target="_blank" href="https://amzn.to/3NZB49U">K1, 1.5mg</a></li>
+          <li><a target="_blank" href="https://amzn.to/3NZB49U">K2 MK-7, 600ug</a></li>
+          <li><a target="_blank" href="https://amzn.to/470BbdU">Lithium, as lithium orotate, 1mg</a></li>
+          <li><a target="_blank" href="https://amzn.to/3Kch6rv">Lycopene 10mg</a></li>
+          <li><a target="_blank" href="https://amzn.to/3pT2CpD">Lysine 1g</a></li>
           <li><a target="_blank" href="">Metformin ER 1,500 (Rx)</a></li>
-          <li><a target="_blank" href="">Nicotinamide Riboside 375mg (6 x wk)</a></li>
-          <li><a target="_blank" href="">N-Acetyl-L-Cysteine (NAC) 1,800 mg</a></li>
-          <li><a target="_blank" href="">Proferrin 10mg</a></li>
-          <li><a target="_blank" href="">Turmeric with piperine 1g</a></li>
-          <li><a target="_blank" href="">Taurine 2g</a></li>
-          <li><a target="_blank" href="">Zeaxanthin (20mg Lutein, 4mg Zeaxanthin)</a></li>
-          <li><a target="_blank" href="">Zinc 15mg</a></li>
+          <li><a target="_blank" href="https://amzn.to/44Wd4LB">Nicotinamide Riboside 375mg (6 x wk)</a></li>
+          <li><a target="_blank" href="https://amzn.to/3Y4nI0B">N-Acetyl-L-Cysteine (NAC) 1,800 mg</a></li>
+          <li><a target="_blank" href="https://amzn.to/3Dt7Nzq">Proferrin 10mg</a></li>
+          <li><a target="_blank" href="https://amzn.to/43yFWZv">Turmeric with piperine 1g</a></li>
+          <li><a target="_blank" href="https://amzn.to/3Q4zd6p">Taurine 2g</a></li>
+          <li><a target="_blank" href="https://amzn.to/3Y4wMCG">Zeaxanthin (20mg Lutein, 4mg Zeaxanthin)</a></li>
+          <li><a target="_blank" href="https://amzn.to/3Y4HJ7m">Zinc 15mg</a></li>
         </ul>
       </div>
       <div class="flex-column">
         <div class="column-title">💊 w/Dinner at 11am</div>
         <ul>
           <li><a target="_blank" href="">Acarbose 200mg (Rx)</a></li>
-          <li><a target="_blank" href="">BroccoMax 17.5mg</a></li>
-          <li><a target="_blank" href="">Ca-AKG 1 gram</a></li>
-          <li><a target="_blank" href="">Cocoa Flavanols 500mg (has caffeine)</a></li>
-          <li><a target="_blank" href="">E 67mg</a></li>
-          <li><a target="_blank" href="">EPA 500mg</a></li>
-          <li><a target="_blank" href="">Garlic 2.4g equivalent</a></li>
-          <li><a target="_blank" href="">Garlic 1.2g (kyolic)</a></li>
-          <li><a target="_blank" href="">Ginger Root 2.2g</a></li>
-          <li><a target="_blank" href="">Glucosamine Sulphate 2KCL 1,500mg</a></li>
-          <li><a target="_blank" href="">Hyaluronic Acid 300mg</a></li>
-          <li><a target="_blank" href="">Lysine 1g</a></li>
-          <li><a target="_blank" href="">L-Tyrosine, 500mg</a></li>
+          <li><a target="_blank" href="https://amzn.to/3Y30YhE">BroccoMax 17.5mg</a></li>
+          <li><a target="_blank" href="https://amzn.to/44AKXC3">Ca-AKG 1 gram</a></li>
+          <li><a target="_blank" href="https://amzn.to/3O51t62">Cocoa Flavanols 500mg (has caffeine)</a></li>
+          <li><a target="_blank" href="https://amzn.to/3Q7XUPc">E 67mg</a></li>
+          <li><a target="_blank" href="https://amzn.to/46Zk4JD">EPA 500mg</a></li>
+          <li><a target="_blank" href="https://amzn.to/46VjP2h">Garlic 2.4g equivalent</a></li>
+          <li><a target="_blank" href="https://amzn.to/3Y77Uuj">Garlic 1.2g (kyolic)</a></li>
+          <li><a target="_blank" href="https://amzn.to/3pZrk7x">Ginger Root 2.2g</a></li>
+          <li><a target="_blank" href="https://amzn.to/3pZNaYy">Glucosamine Sulphate 2KCL 1,500mg</a></li>
+          <li><a target="_blank" href="https://amzn.to/3Y36L6O">Hyaluronic Acid 300mg</a></li>
+          <li><a target="_blank" href="https://amzn.to/3pT2CpD">Lysine 1g</a></li>
+          <li><a target="_blank" href="https://amzn.to/3Y1Z3db">L-Tyrosine, 500mg</a></li>
           <li><a target="_blank" href="">Metformin ER 500 mg (Rx)</a></li>
-          <li><a target="_blank" href="">N-Acetyl-L-Cysteine (NAC) 1,800 mg</a></li>
-          <li><a target="_blank" href="">Nicotinamide Riboside 375mg (6x wk)</a></li>
-          <li><a target="_blank" href="">Taurine 1g</a></li>
-          <li><a target="_blank" href="">Turmeric 1g</a></li>
+          <li><a target="_blank" href="https://amzn.to/3Y4nI0B">N-Acetyl-L-Cysteine (NAC) 1,800 mg</a></li>
+          <li><a target="_blank" href="https://amzn.to/44Wd4LB">Nicotinamide Riboside 375mg (6x wk)</a></li>
+          <li><a target="_blank" href="https://amzn.to/3Q4zd6p">Taurine 1g</a></li>
+          <li><a target="_blank" href="https://amzn.to/43yFWZv">Turmeric 1g</a></li>
         </ul>
       </div>
       <div class="flex-column">
         <div class="column-title">💊 Other</div>
         <ul>
-          <li><a target="_blank" href="">Extra Virgin Olive Oil, 30mL daily</a></li>
+          <li><a target="_blank" href="https://amzn.to/46YuJ7p">Extra Virgin Olive Oil, 30mL daily</a></li>
           <li><a target="_blank" href="https://amzn.to/3Y3pkry">Pea Protein, 29 grams daily</a></li>
           <li><a target="_blank" href="">Dark Chocolate, 15 grams</a></li>
           <li><a target="_blank" href="">Rapamycin 13mg, bi-weekly (Rx)</a></li>
